@@ -1,5 +1,5 @@
 /* install-info -- create Info directory entry(ies) for an Info file.
-   $Id: install-info.c,v 1.4 2008-02-24 23:27:29 karl Exp $
+   $Id: install-info.c,v 1.5 2008-02-24 23:52:56 karl Exp $
 
    Copyright (C) 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004,
    2005, 2007, 2008 Free Software Foundation, Inc.
@@ -1715,13 +1715,15 @@ munge_old_style_debian_options (int argc, char **argv,
 	
 	  /* Okay, we munge the options to look like this:
 	     --regex=REGEX --section=TITLE --add-once */
-	  if (asprintf (&opt, "--regex=%s", regex) == -1)
+          opt = xmalloc (strlen (regex) + sizeof ("--regex="));
+	  if (sprintf (opt, "--regex=%s", regex) == -1)
 	    err = 1;
 	  if (!err)
 	    err = argz_add (&argz, &argz_len, opt);
 	  free (opt); opt = NULL;
 
-	  if (asprintf (&opt, "--section=%s", title) == -1)
+          opt = xmalloc (strlen (regex) + sizeof ("--section="));
+	  if (sprintf (opt, "--section=%s", title) == -1)
 	    err = 1;
 	  if (!err)
 	    err = argz_add (&argz, &argz_len, opt);
